--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,13 @@ section {
     position: relative;
 }
 header {
-    background-color: #06c;
+    /*background-color: #06c;*/
+    width: 100%;
     padding-top: 1rem;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 3;
 }
 .logo {
     display: flex;
@@ -71,8 +76,11 @@ header {
 }
 #offer {
     background-color: #06c;
-    padding: 3rem 0;
+    padding: 120px 0 3rem 0;
     height: 100vh;
+    background: url('../video/offer_fon.mp4');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 #offer:after {
   background: inherit;
@@ -87,32 +95,59 @@ header {
   transform-origin: 100%;
   z-index: -1;
 }
+#offer video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 0;
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+}
+.offer__bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 1;
+    width: 100%;
+    height: 100vh;
+    background-color: #06c;
+    opacity: .75;
+    object-fit: cover;
+}
 .offer__header {
     margin-bottom: 2rem;
     color: #ffffff;
     text-align: left;
     font-weight: bold;
+    z-index: 2;
 }
 .offer__subheader {
-    
     margin: 0 0 1.5rem 0;
     color: #ffffff;
     text-align: left;
     font-weight: bold;
     padding: 0.375rem 0.75rem 0.575rem 0.75rem;
     background-color: #ef8c10;
+    z-index: 2;
 }
 .offer {
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
     align-items: flex-start;
+    z-index: 2;
 }
 .needs {
     display: flex;
     justify-content: flex-start;
     align-items: center;
     padding-left: 4rem;
+    z-index: 2;
 }
 .offer__needs {
     color: #ffffff;
@@ -129,8 +164,12 @@ header {
 .offer__needs li {
     margin-bottom: .75rem;
 }
+.offer__form-wrapper {
+    z-index: 2;
+}
 .offer__form {
     padding-top: 1rem;
+    z-index: 2;
 }
 .offer__form-col,
 .order__form-col {
@@ -139,12 +178,14 @@ header {
     justify-content: center;
     align-items: center;
     align-content: center;
+    z-index: 2;
 }
 .offer__form-header {
     color: #ffffff;
     text-align: center;
     margin-bottom: 1.5rem;
     font-size: 1.5rem;
+    z-index: 2;
 }
 .order__form-header {
     color: #ffffff;
@@ -159,12 +200,14 @@ header {
     flex-flow: row nowrap;
     justify-content: flex-start;
     align-items: center;
+    z-index: 2;
 }
 .offer__form-input {
     margin-right: 1rem;
     border: 1px solid #ffffff;
     border-radius: 0;
     height: 3rem;
+    z-index: 2;
 }
 .offer__form-btn,
 .order__form-btn {
@@ -173,6 +216,7 @@ header {
     border-radius: 0;
     font-weight: bold;
     height: 3rem;
+    z-index: 2;
 }
 .offer__form-btn:hover,
 .order__form-btn:hover {
